--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Low throughput science
+email: alex.rubinsteyn@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Machine learning, genomics, immunology.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://rubinsteyn.com" # the base hostname & protocol for your site
+twitter_username: iskander
+github_username:  iskandr
+theme: minima
 
 # Build settings
 markdown: kramdown
